--- a/WIP/dtm_v2/scss/layout/_about.scss
+++ b/WIP/dtm_v2/scss/layout/_about.scss
@@ -155,5 +155,9 @@ ABOUT
     // &--skill-linode {
     //   width: 2rem;
     // }
+
+    &--skill-figma {
+      color: silver;
+    }
   }
 }
